--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "express-validator": "^6.9.2",
     "handlebars": "^4.7.6",
     "isemail": "^3.2.0",
+    "moment": "^2.29.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "ngrok": "^3.4.0",
     "nodemailer": "^6.4.17",
+    "path": "^0.12.7",
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
